<resources>
    <string name="app_name">Bookapi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_label">REGISTER</string>
    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="register_password"> Password</string>
    <string name="register_cpassword"> Confirm Password</string>
    <string name="btn_aaccount">Already Have an Account?</string>
    <string name="btn_login">Login</string>
    <string name="login_label">LOGIN</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="register_location">Location</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="daccount">Dont have an Account?</string>
    <string name="btn_signup">SignUp</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>


</resources>