<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryLightColor"
    tools:context=".fragments.registerFragment">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_label"
        android:textColor="@color/primaryTextColor"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/edt_rUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/register_username"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/edt_rEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/register_email"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="@+id/edt_rUsername"
        app:layout_constraintStart_toStartOf="@+id/edt_rUsername"
        app:layout_constraintTop_toBottomOf="@+id/edt_rUsername" />

    <EditText
        android:id="@+id/edt_rPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="@+id/edt_rEmail"
        app:layout_constraintStart_toStartOf="@+id/edt_rEmail"
        app:layout_constraintTop_toBottomOf="@+id/edt_rEmail" />

    <EditText
        android:id="@+id/edt_rCPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/register_cpassword"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="@+id/edt_rPassword"
        app:layout_constraintStart_toStartOf="@+id/edt_rPassword"
        app:layout_constraintTop_toBottomOf="@+id/edt_rPassword" />


    <EditText
        android:id="@+id/edt_rlocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/city"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/register_location"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="@+id/edt_rCPassword"
        app:layout_constraintStart_toStartOf="@+id/edt_rCPassword"
        app:layout_constraintTop_toBottomOf="@+id/edt_rCPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/primaryDarkColor"
        android:text="@string/register_label"
        app:layout_constraintEnd_toEndOf="@+id/edt_rlocation"
        app:layout_constraintStart_toStartOf="@+id/edt_rlocation"
        app:layout_constraintTop_toBottomOf="@+id/edt_rlocation" />

    <TextView
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:shadowColor="@color/colorWhite"
        android:text="Already Have an Account?"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />


</androidx.constraintlayout.widget.ConstraintLayout>